<resources>
    <string name="app_name">Weasley Messenger</string>
    <string name="new_recipient_activity_name">New Recipient</string>
    <string name="edit_recipient_activity_name">Edit Recipient</string>
    <string name="recipient_alias">Alias</string>
    <string name="message_to_be_sent">Message To Be Sent</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_button">SELECT A CONTACT</string>
    <string name="location_distance">Distance (in Meters)</string>
    <string name="location_label">Get Location</string>
    <string name="location_button">Fetch</string>
    <string name="location_refresh_rate">Location Refresh Rate (in Minutes)</string>
    <string name="location_accuracy">Location Accuracy</string>
    <string name="save_button">SAVE</string>
    <string name="back_recipient_button">BACK</string>
    <string name="delete_recipient_button">DELETE</string>
    <string name="delete_all_contacts">DELETE ALL CONTACTS</string>
    <string name="start_location_service">START LOCATION SERVICE</string>
    <string name="stop_location_service">STOP LOCATION SERVICE</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="on_boot_startup">Service Startup on Boot</string>
    <string-array name="accuracy_array">
        <item>HIGH</item>
        <item>MEDIUM</item>
        <item>LOW</item>
    </string-array>
    <string-array name="on_boot_startup_array">
        <item>YES</item>
        <item>NO</item>
    </string-array>
</resources>
