<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/edit_recipient_name"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:text="@string/recipient_name"
            app:layout_constraintEnd_toStartOf="@+id/edit_recipient_name_input"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_recipient_name_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/edit_textView2"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:text="@string/phone_number"
            app:layout_constraintEnd_toStartOf="@+id/edit_phone_number_input"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_phone_number_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="@id/constraintLayout2"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/edit_textView3"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/message_to_be_sent"
            app:layout_constraintEnd_toStartOf="@+id/edit_message_to_be_sent_input"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_message_to_be_sent_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toBottomOf="@id/constraintLayout3"
        app:layout_constraintBottom_toTopOf="@+id/edit_save_button"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/edit_textView4"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/location_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/edit_location_button"
            android:layout_width="213dp"
            android:layout_height="47dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:text="@string/location_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/edit_location_current"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_textView4" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/edit_save_button"
        android:layout_width="308dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="132dp"
        android:text="@string/save_recipient_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/edit_delete_button"
        android:layout_width="308dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="76dp"
        android:text="@string/delete_recipient_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/edit_back_button_recipient"
        android:layout_width="308dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/back_recipient_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_delete_button"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>